[package]
name = "to_do_list"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
chrono =  { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
actix-web = "4"
actix-cors = "0.7.1"
env_logger = "0.11" 
log = "0.4"  
regex = "1.10"
argon2 = "0.5.3"
rand = "0.8" 